stucture and builder fixed

--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -3,7 +3,8 @@
 //-------------------------------------------
 @import
   "_mixin/variables",
-  "_mixin/placeholders";
+  "_mixin/placeholders",
+  "font";
 // ------------------------------------------
 // Base
 //-------------------------------------------
