structure and builder fixed 2

--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -4,7 +4,8 @@
 @import
   "_mixin/variables",
   "_mixin/placeholders",
-  "font";
+  "font",
+  "_sprite";
 // ------------------------------------------
 // Base
 //-------------------------------------------
