--- a/source/style/_sprite.scss
+++ b/source/style/_sprite.scss
@@ -20,8 +20,8 @@ $down-arrow-h-width: 13px;
 $down-arrow-h-height: 8px;
 $down-arrow-h-total-width: 259px;
 $down-arrow-h-total-height: 82px;
-$down-arrow-h-image: 'sprite.png';
-$down-arrow-h: (0px, 0px, 0px, 0px, 13px, 8px, 259px, 82px, 'sprite.png', 'down-arrow-h', );
+$down-arrow-h-image: '../images/sprite.png';
+$down-arrow-h: (0px, 0px, 0px, 0px, 13px, 8px, 259px, 82px, '../images/sprite.png', 'down-arrow-h', );
 $down-arrow-name: 'down-arrow';
 $down-arrow-x: 0px;
 $down-arrow-y: 18px;
@@ -31,8 +31,8 @@ $down-arrow-width: 13px;
 $down-arrow-height: 8px;
 $down-arrow-total-width: 259px;
 $down-arrow-total-height: 82px;
-$down-arrow-image: 'sprite.png';
-$down-arrow: (0px, 18px, 0px, -18px, 13px, 8px, 259px, 82px, 'sprite.png', 'down-arrow', );
+$down-arrow-image: '../images/sprite.png';
+$down-arrow: (0px, 18px, 0px, -18px, 13px, 8px, 259px, 82px, '../images/sprite.png', 'down-arrow', );
 $hr-name: 'hr';
 $hr-x: 0px;
 $hr-y: 72px;
@@ -42,8 +42,8 @@ $hr-width: 259px;
 $hr-height: 10px;
 $hr-total-width: 259px;
 $hr-total-height: 82px;
-$hr-image: 'sprite.png';
-$hr: (0px, 72px, 0px, -72px, 259px, 10px, 259px, 82px, 'sprite.png', 'hr', );
+$hr-image: '../images/sprite.png';
+$hr: (0px, 72px, 0px, -72px, 259px, 10px, 259px, 82px, '../images/sprite.png', 'hr', );
 $up-arrow-h-name: 'up-arrow-h';
 $up-arrow-h-x: 0px;
 $up-arrow-h-y: 36px;
@@ -53,8 +53,8 @@ $up-arrow-h-width: 13px;
 $up-arrow-h-height: 8px;
 $up-arrow-h-total-width: 259px;
 $up-arrow-h-total-height: 82px;
-$up-arrow-h-image: 'sprite.png';
-$up-arrow-h: (0px, 36px, 0px, -36px, 13px, 8px, 259px, 82px, 'sprite.png', 'up-arrow-h', );
+$up-arrow-h-image: '../images/sprite.png';
+$up-arrow-h: (0px, 36px, 0px, -36px, 13px, 8px, 259px, 82px, '../images/sprite.png', 'up-arrow-h', );
 $up-arrow-name: 'up-arrow';
 $up-arrow-x: 0px;
 $up-arrow-y: 54px;
@@ -64,13 +64,13 @@ $up-arrow-width: 13px;
 $up-arrow-height: 8px;
 $up-arrow-total-width: 259px;
 $up-arrow-total-height: 82px;
-$up-arrow-image: 'sprite.png';
-$up-arrow: (0px, 54px, 0px, -54px, 13px, 8px, 259px, 82px, 'sprite.png', 'up-arrow', );
+$up-arrow-image: '../images/sprite.png';
+$up-arrow: (0px, 54px, 0px, -54px, 13px, 8px, 259px, 82px, '../images/sprite.png', 'up-arrow', );
 $spritesheet-width: 259px;
 $spritesheet-height: 82px;
-$spritesheet-image: 'sprite.png';
+$spritesheet-image: '../images/sprite.png';
 $spritesheet-sprites: ($down-arrow-h, $down-arrow, $hr, $up-arrow-h, $up-arrow, );
-$spritesheet: (259px, 82px, 'sprite.png', $spritesheet-sprites, );
+$spritesheet: (259px, 82px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
