Added content block and styles

--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -11,6 +11,7 @@
 //-------------------------------------------
 @import
   "_blocks/_container",
+  "_blocks/_content",
   "_blocks/_settings",
   "_blocks/footer";
 
