--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -6,6 +6,6 @@ block title
 block content
   main.maincontent
     .main-content
-      include ./_common/_canvas
+      include ./_common/_content
     aside.settings
       include ./_common/_settings
