--- a/source/style/_blocks/_settings.scss
+++ b/source/style/_blocks/_settings.scss
@@ -1,5 +1,4 @@
-@import
-  "_file",
-  "_position",
-  "_buttons",
-  "_opacity";
+@import "_file";
+@import "_position";
+@import "_buttons";
+@import "_opacity";
