--- a/source/style/_sprite.scss
+++ b/source/style/_sprite.scss
@@ -19,9 +19,9 @@ $down-arrow-h-offset-y: 0px;
 $down-arrow-h-width: 13px;
 $down-arrow-h-height: 8px;
 $down-arrow-h-total-width: 259px;
-$down-arrow-h-total-height: 360px;
+$down-arrow-h-total-height: 386px;
 $down-arrow-h-image: '../images/sprite.png';
-$down-arrow-h: (0px, 0px, 0px, 0px, 13px, 8px, 259px, 360px, '../images/sprite.png', 'down-arrow-h', );
+$down-arrow-h: (0px, 0px, 0px, 0px, 13px, 8px, 259px, 386px, '../images/sprite.png', 'down-arrow-h', );
 $down-arrow-name: 'down-arrow';
 $down-arrow-x: 0px;
 $down-arrow-y: 54px;
@@ -30,31 +30,42 @@ $down-arrow-offset-y: -54px;
 $down-arrow-width: 13px;
 $down-arrow-height: 8px;
 $down-arrow-total-width: 259px;
-$down-arrow-total-height: 360px;
+$down-arrow-total-height: 386px;
 $down-arrow-image: '../images/sprite.png';
-$down-arrow: (0px, 54px, 0px, -54px, 13px, 8px, 259px, 360px, '../images/sprite.png', 'down-arrow', );
+$down-arrow: (0px, 54px, 0px, -54px, 13px, 8px, 259px, 386px, '../images/sprite.png', 'down-arrow', );
+$download-name: 'download';
+$download-x: 0px;
+$download-y: 92px;
+$download-offset-x: 0px;
+$download-offset-y: -92px;
+$download-width: 21px;
+$download-height: 16px;
+$download-total-width: 259px;
+$download-total-height: 386px;
+$download-image: '../images/sprite.png';
+$download: (0px, 92px, 0px, -92px, 21px, 16px, 259px, 386px, '../images/sprite.png', 'download', );
 $fb-name: 'fb';
 $fb-x: 0px;
-$fb-y: 249px;
+$fb-y: 275px;
 $fb-offset-x: 0px;
-$fb-offset-y: -249px;
+$fb-offset-y: -275px;
 $fb-width: 15px;
 $fb-height: 27px;
 $fb-total-width: 259px;
-$fb-total-height: 360px;
+$fb-total-height: 386px;
 $fb-image: '../images/sprite.png';
-$fb: (0px, 249px, 0px, -249px, 15px, 27px, 259px, 360px, '../images/sprite.png', 'fb', );
+$fb: (0px, 275px, 0px, -275px, 15px, 27px, 259px, 386px, '../images/sprite.png', 'fb', );
 $fb-hover-name: 'fb_hover';
 $fb-hover-x: 0px;
-$fb-hover-y: 212px;
+$fb-hover-y: 238px;
 $fb-hover-offset-x: 0px;
-$fb-hover-offset-y: -212px;
+$fb-hover-offset-y: -238px;
 $fb-hover-width: 15px;
 $fb-hover-height: 27px;
 $fb-hover-total-width: 259px;
-$fb-hover-total-height: 360px;
+$fb-hover-total-height: 386px;
 $fb-hover-image: '../images/sprite.png';
-$fb-hover: (0px, 212px, 0px, -212px, 15px, 27px, 259px, 360px, '../images/sprite.png', 'fb_hover', );
+$fb-hover: (0px, 238px, 0px, -238px, 15px, 27px, 259px, 386px, '../images/sprite.png', 'fb_hover', );
 $hr-name: 'hr';
 $hr-x: 0px;
 $hr-y: 72px;
@@ -63,53 +74,53 @@ $hr-offset-y: -72px;
 $hr-width: 259px;
 $hr-height: 10px;
 $hr-total-width: 259px;
-$hr-total-height: 360px;
+$hr-total-height: 386px;
 $hr-image: '../images/sprite.png';
-$hr: (0px, 72px, 0px, -72px, 259px, 10px, 259px, 360px, '../images/sprite.png', 'hr', );
+$hr: (0px, 72px, 0px, -72px, 259px, 10px, 259px, 386px, '../images/sprite.png', 'hr', );
 $like-name: 'like';
 $like-x: 0px;
-$like-y: 286px;
+$like-y: 312px;
 $like-offset-x: 0px;
-$like-offset-y: -286px;
+$like-offset-y: -312px;
 $like-width: 26px;
 $like-height: 32px;
 $like-total-width: 259px;
-$like-total-height: 360px;
+$like-total-height: 386px;
 $like-image: '../images/sprite.png';
-$like: (0px, 286px, 0px, -286px, 26px, 32px, 259px, 360px, '../images/sprite.png', 'like', );
+$like: (0px, 312px, 0px, -312px, 26px, 32px, 259px, 386px, '../images/sprite.png', 'like', );
 $like-hover-name: 'like_hover';
 $like-hover-x: 0px;
-$like-hover-y: 328px;
+$like-hover-y: 354px;
 $like-hover-offset-x: 0px;
-$like-hover-offset-y: -328px;
+$like-hover-offset-y: -354px;
 $like-hover-width: 26px;
 $like-hover-height: 32px;
 $like-hover-total-width: 259px;
-$like-hover-total-height: 360px;
+$like-hover-total-height: 386px;
 $like-hover-image: '../images/sprite.png';
-$like-hover: (0px, 328px, 0px, -328px, 26px, 32px, 259px, 360px, '../images/sprite.png', 'like_hover', );
+$like-hover: (0px, 354px, 0px, -354px, 26px, 32px, 259px, 386px, '../images/sprite.png', 'like_hover', );
 $tw-name: 'tw';
 $tw-x: 0px;
-$tw-y: 148px;
+$tw-y: 174px;
 $tw-offset-x: 0px;
-$tw-offset-y: -148px;
+$tw-offset-y: -174px;
 $tw-width: 28px;
 $tw-height: 22px;
 $tw-total-width: 259px;
-$tw-total-height: 360px;
+$tw-total-height: 386px;
 $tw-image: '../images/sprite.png';
-$tw: (0px, 148px, 0px, -148px, 28px, 22px, 259px, 360px, '../images/sprite.png', 'tw', );
+$tw: (0px, 174px, 0px, -174px, 28px, 22px, 259px, 386px, '../images/sprite.png', 'tw', );
 $tw-hover-name: 'tw_hover';
 $tw-hover-x: 0px;
-$tw-hover-y: 180px;
+$tw-hover-y: 206px;
 $tw-hover-offset-x: 0px;
-$tw-hover-offset-y: -180px;
+$tw-hover-offset-y: -206px;
 $tw-hover-width: 28px;
 $tw-hover-height: 22px;
 $tw-hover-total-width: 259px;
-$tw-hover-total-height: 360px;
+$tw-hover-total-height: 386px;
 $tw-hover-image: '../images/sprite.png';
-$tw-hover: (0px, 180px, 0px, -180px, 28px, 22px, 259px, 360px, '../images/sprite.png', 'tw_hover', );
+$tw-hover: (0px, 206px, 0px, -206px, 28px, 22px, 259px, 386px, '../images/sprite.png', 'tw_hover', );
 $up-arrow-h-name: 'up-arrow-h';
 $up-arrow-h-x: 0px;
 $up-arrow-h-y: 36px;
@@ -118,9 +129,9 @@ $up-arrow-h-offset-y: -36px;
 $up-arrow-h-width: 13px;
 $up-arrow-h-height: 8px;
 $up-arrow-h-total-width: 259px;
-$up-arrow-h-total-height: 360px;
+$up-arrow-h-total-height: 386px;
 $up-arrow-h-image: '../images/sprite.png';
-$up-arrow-h: (0px, 36px, 0px, -36px, 13px, 8px, 259px, 360px, '../images/sprite.png', 'up-arrow-h', );
+$up-arrow-h: (0px, 36px, 0px, -36px, 13px, 8px, 259px, 386px, '../images/sprite.png', 'up-arrow-h', );
 $up-arrow-name: 'up-arrow';
 $up-arrow-x: 0px;
 $up-arrow-y: 18px;
@@ -129,36 +140,36 @@ $up-arrow-offset-y: -18px;
 $up-arrow-width: 13px;
 $up-arrow-height: 8px;
 $up-arrow-total-width: 259px;
-$up-arrow-total-height: 360px;
+$up-arrow-total-height: 386px;
 $up-arrow-image: '../images/sprite.png';
-$up-arrow: (0px, 18px, 0px, -18px, 13px, 8px, 259px, 360px, '../images/sprite.png', 'up-arrow', );
+$up-arrow: (0px, 18px, 0px, -18px, 13px, 8px, 259px, 386px, '../images/sprite.png', 'up-arrow', );
 $vk-name: 'vk';
 $vk-x: 0px;
-$vk-y: 120px;
+$vk-y: 146px;
 $vk-offset-x: 0px;
-$vk-offset-y: -120px;
+$vk-offset-y: -146px;
 $vk-width: 32px;
 $vk-height: 18px;
 $vk-total-width: 259px;
-$vk-total-height: 360px;
+$vk-total-height: 386px;
 $vk-image: '../images/sprite.png';
-$vk: (0px, 120px, 0px, -120px, 32px, 18px, 259px, 360px, '../images/sprite.png', 'vk', );
+$vk: (0px, 146px, 0px, -146px, 32px, 18px, 259px, 386px, '../images/sprite.png', 'vk', );
 $vk-hover-name: 'vk_hover';
 $vk-hover-x: 0px;
-$vk-hover-y: 92px;
+$vk-hover-y: 118px;
 $vk-hover-offset-x: 0px;
-$vk-hover-offset-y: -92px;
+$vk-hover-offset-y: -118px;
 $vk-hover-width: 32px;
 $vk-hover-height: 18px;
 $vk-hover-total-width: 259px;
-$vk-hover-total-height: 360px;
+$vk-hover-total-height: 386px;
 $vk-hover-image: '../images/sprite.png';
-$vk-hover: (0px, 92px, 0px, -92px, 32px, 18px, 259px, 360px, '../images/sprite.png', 'vk_hover', );
+$vk-hover: (0px, 118px, 0px, -118px, 32px, 18px, 259px, 386px, '../images/sprite.png', 'vk_hover', );
 $spritesheet-width: 259px;
-$spritesheet-height: 360px;
+$spritesheet-height: 386px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($down-arrow-h, $down-arrow, $fb, $fb-hover, $hr, $like, $like-hover, $tw, $tw-hover, $up-arrow-h, $up-arrow, $vk, $vk-hover, );
-$spritesheet: (259px, 360px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($down-arrow-h, $down-arrow, $download, $fb, $fb-hover, $hr, $like, $like-hover, $tw, $tw-hover, $up-arrow-h, $up-arrow, $vk, $vk-hover, );
+$spritesheet: (259px, 386px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
