--- a/source/template/_common/_settings.jade
+++ b/source/template/_common/_settings.jade
@@ -1,4 +1,6 @@
-include _file
-include _position
-include _opacity
-include _buttons
+h3.settings__title Настройки
+form.form#form(action="")
+  include _file
+  include _position
+  include _opacity
+  include _buttons
