--- a/source/style/_blocks/_position.scss
+++ b/source/style/_blocks/_position.scss
@@ -21,3 +21,148 @@
     font-size: 26px;
   }
 }
+.settings-wrap{
+  &_pos{
+  margin-bottom: 40px;
+  margin-top:18px;
+  }
+  &_opacity{
+    margin-bottom: 40px;
+    margin-top: 60px;
+  }
+  &_btn{
+    margin-bottom: 26px;
+    margin-top: 100px;
+  }
+}
+
+.settings__line_wrap {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.settings__line {
+  width: 100%;
+  height: 1px;
+  background-color: #f4c3c2;
+
+  &:after {
+    content: "";
+    position: absolute;
+    border: 15px solid transparent;
+    border-top: 15px solid #f4c3c2;
+    top: 0;
+    right: 110px;
+  }
+}
+.setting-box {
+  @extend %clearfix;
+  width: 102px;
+  height: 102px;
+  background-color: #dbe1e8;
+  // border: 1px solid #9eb2c0;
+  border-radius: 3px;
+  box-sizing: border-box;
+  float: left;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.settings-box__min {
+  width: 32px;
+  height: 32px;
+  border: 1px solid #9eb2c0;
+
+  &:hover {
+    background-color: #f97e76;
+  }
+
+  &:nth-child(1) {
+    border-radius: 3px 0 0 0;
+  }
+
+  &:nth-child(3) {
+    border-radius: 0 3px 0 0;
+  }
+
+  &:nth-child(7) {
+    border-radius: 0 0 0 3px;
+  }
+
+  &:nth-child(9) {
+    border-radius: 0 0 3px 0;
+  }
+ }
+
+ .settings-pos__wrap {
+  width: 80px;
+ }
+.setting-pos{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+  &__title{
+    margin-bottom: 24px;
+  }
+  &_one{
+    float: right;
+    width: 80px;
+    height: 100px;
+    display: inline-block;
+  }
+  &__box{
+    margin-bottom: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+   &__text{
+    color: #2e3641;
+    font-size: 16px;
+    font-family:'RobotoLight';
+    border-radius: 2px;
+    color: #444a53;
+  }
+  &__control{
+    width: 40px;
+    font-size: 24px;
+    line-height: 38px;
+    text-align: center;
+    border-radius: 4px;
+    background: #f1f1f5;
+    border: 1px solid #9eb2c0;
+  }
+  &__control-box{
+    position: relative;
+    height: 38px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+  }
+  &__control-btn{
+    position: relative;
+    display: inline-block;
+    &_up{
+      vertical-align: top;
+      height: 17px;
+        width: 13px;
+      @include sprite($up-arrow);
+      cursor: pointer;
+      
+      &:hover{
+        @include sprite($up-arrow-h);
+        cursor: pointer;
+      }
+    }
+    &_down{
+      vertical-align: bottom;
+      @include sprite($down-arrow);
+      cursor: pointer;
+      
+      &:hover{
+        @include sprite($down-arrow-h);
+        cursor: pointer;
+      }
+    }
+  }
+}
