--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -13,6 +13,8 @@ block content
         li(class="languages__item")
           a(href="#").languages__link
             | ENG
+    .links__like
+      a(href="#" class="like-link")
     .links__socials
       - var icons = ['fb', 'tw', 'vk']
       ul.socials
