--- a/source/style/_blocks/_position.scss
+++ b/source/style/_blocks/_position.scss
@@ -11,6 +11,7 @@
   position: relative;
   float: right;
   height: 100%;
+  min-height: 670px;
   &__title{
     text-align: center;
     margin: 0;
