--- a/source/template/_common/_content.jade
+++ b/source/template/_common/_content.jade
@@ -4,5 +4,5 @@ section.content
 	.content__main-window
 		.content__img-block
 			img.content__img#uploaded-img(src="assets/images/pen-notebook.jpg", alt="image")
-		.content__watermark
-			img.content__img#watermark(src="assets/images/watermark.png", alt="watermark")
+			.content__watermark-block
+				img.content__watermark#watermark(src="assets/images/kotik-v-shoke.jpg", alt="watermark")
