--- a/source/template/_common/_opacity.jade
+++ b/source/template/_common/_opacity.jade
@@ -1,5 +1,5 @@
 .form__section.settings-wrap_opacity
   h2.form__section__title Прозрачность
   .settings-slider
-      #slider-range-min
+      #slider
 .hr-down
