--- a/source/template/_common/_position.jade
+++ b/source/template/_common/_position.jade
@@ -1,8 +1,18 @@
 .form__section.settings-wrap_pos
   h2.form__section__title Положение
-  .setting-box
-    - for (var n = 1; n < 10; n++) 
-      .settings-box__min
+    .setting-box
+      .settings-box__row
+        .settings-box__cell
+        .settings-box__cell
+        .settings-box__cell
+      .settings-box__row
+        .settings-box__cell
+        .settings-box__cell
+        .settings-box__cell  
+      .settings-box__row
+        .settings-box__cell
+        .settings-box__cell
+        .settings-box__cell  
   .setting-pos.setting-pos_one
     .setting-pos__box
       label.setting-pos__text X
