--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -22,6 +22,7 @@ block content
       a(href="#" class="socials_link-like")
     .links__like
       a(href="#" class="like-link active")
+  .upload-img
   main.main_wrap
     .main_content
       include ./_common/_content
