Fixed background bugs, added & renamed some id

--- a/source/template/_common/_content.jade
+++ b/source/template/_common/_content.jade
@@ -2,7 +2,7 @@ section.content
 	.content__title
 		h1.content__title-text Генератор водяных знаков
 	.content__main-window
-		.content__img-block
+		.content__img-block#contentImgBlock
 			img.content__img#uploaded-img(src="assets/images/pen-notebook.jpg", alt="image")
-			.content__watermark-block#draggable
-				img.content__watermark#watermark(src="assets/images/kotik-v-shoke.jpg", alt="watermark")
+			.content__watermark-block#watermark
+				img.content__watermark(src="assets/images/kotik-v-shoke.jpg", alt="watermark")#watermarkImg
