--- a/source/style/_blocks/_base.scss
+++ b/source/style/_blocks/_base.scss
@@ -1,6 +1,9 @@
+html, 
 body{
   height: 100%;
-  background: url('/assets/images/bg.jpg');
+}
+body{
+  background: url('/assets/images/bg.jpg') no-repeat;
   display: flex;
   background-size: cover;
   flex-flow: column nowrap;
