add plugin spinner & edit plugin draggable

--- a/source/template/_common/_position.jade
+++ b/source/template/_common/_position.jade
@@ -16,7 +16,7 @@
   .setting-pos.setting-pos_one
     .setting-pos__box
       label.setting-pos__text X
-      input(type="number" class="setting-pos__control control_X" id="control_X")
+      input(type="text" class="setting-pos__control control_X" id="control_X")
       .setting-pos__control-box
         .setting-pos__control-btn.setting-pos__control-btn_up#upX
         .setting-pos__control-btn.setting-pos__control-btn_down#downX
