--- a/source/template/_common/_position.jade
+++ b/source/template/_common/_position.jade
@@ -1,5 +1,6 @@
 .form__section.settings-wrap_pos
   .form__section__title Положение
+  a(href="#")#clickme Clickme
   .setting-box
       .settings-box__row
         .settings-box__cell
