Кнопки переключения режима водяного знака

--- a/source/style/_blocks/_file.scss
+++ b/source/style/_blocks/_file.scss
@@ -15,7 +15,9 @@
       font-family: 'RobotoLight';
       font-weight: normal;
       color: #2e3641;
- //     margin-bottom: 30px;
+        &_pos{
+          float:left;
+        }
       }
   }
   &__file{
