--- a/source/style/_sprite.scss
+++ b/source/style/_sprite.scss
@@ -19,9 +19,9 @@ $down-arrow-h-offset-y: 0px;
 $down-arrow-h-width: 13px;
 $down-arrow-h-height: 8px;
 $down-arrow-h-total-width: 259px;
-$down-arrow-h-total-height: 454px;
+$down-arrow-h-total-height: 570px;
 $down-arrow-h-image: '../images/sprite.png';
-$down-arrow-h: (0px, 0px, 0px, 0px, 13px, 8px, 259px, 454px, '../images/sprite.png', 'down-arrow-h', );
+$down-arrow-h: (0px, 0px, 0px, 0px, 13px, 8px, 259px, 570px, '../images/sprite.png', 'down-arrow-h', );
 $down-arrow-name: 'down-arrow';
 $down-arrow-x: 0px;
 $down-arrow-y: 54px;
@@ -30,9 +30,9 @@ $down-arrow-offset-y: -54px;
 $down-arrow-width: 13px;
 $down-arrow-height: 8px;
 $down-arrow-total-width: 259px;
-$down-arrow-total-height: 454px;
+$down-arrow-total-height: 570px;
 $down-arrow-image: '../images/sprite.png';
-$down-arrow: (0px, 54px, 0px, -54px, 13px, 8px, 259px, 454px, '../images/sprite.png', 'down-arrow', );
+$down-arrow: (0px, 54px, 0px, -54px, 13px, 8px, 259px, 570px, '../images/sprite.png', 'down-arrow', );
 $download-name: 'download';
 $download-x: 0px;
 $download-y: 92px;
@@ -41,31 +41,31 @@ $download-offset-y: -92px;
 $download-width: 21px;
 $download-height: 16px;
 $download-total-width: 259px;
-$download-total-height: 454px;
+$download-total-height: 570px;
 $download-image: '../images/sprite.png';
-$download: (0px, 92px, 0px, -92px, 21px, 16px, 259px, 454px, '../images/sprite.png', 'download', );
+$download: (0px, 92px, 0px, -92px, 21px, 16px, 259px, 570px, '../images/sprite.png', 'download', );
 $fb-name: 'fb';
 $fb-x: 0px;
-$fb-y: 343px;
+$fb-y: 459px;
 $fb-offset-x: 0px;
-$fb-offset-y: -343px;
+$fb-offset-y: -459px;
 $fb-width: 15px;
 $fb-height: 27px;
 $fb-total-width: 259px;
-$fb-total-height: 454px;
+$fb-total-height: 570px;
 $fb-image: '../images/sprite.png';
-$fb: (0px, 343px, 0px, -343px, 15px, 27px, 259px, 454px, '../images/sprite.png', 'fb', );
+$fb: (0px, 459px, 0px, -459px, 15px, 27px, 259px, 570px, '../images/sprite.png', 'fb', );
 $fb-hover-name: 'fb_hover';
 $fb-hover-x: 0px;
-$fb-hover-y: 306px;
+$fb-hover-y: 422px;
 $fb-hover-offset-x: 0px;
-$fb-hover-offset-y: -306px;
+$fb-hover-offset-y: -422px;
 $fb-hover-width: 15px;
 $fb-hover-height: 27px;
 $fb-hover-total-width: 259px;
-$fb-hover-total-height: 454px;
+$fb-hover-total-height: 570px;
 $fb-hover-image: '../images/sprite.png';
-$fb-hover: (0px, 306px, 0px, -306px, 15px, 27px, 259px, 454px, '../images/sprite.png', 'fb_hover', );
+$fb-hover: (0px, 422px, 0px, -422px, 15px, 27px, 259px, 570px, '../images/sprite.png', 'fb_hover', );
 $hr-name: 'hr';
 $hr-x: 0px;
 $hr-y: 72px;
@@ -74,75 +74,119 @@ $hr-offset-y: -72px;
 $hr-width: 259px;
 $hr-height: 10px;
 $hr-total-width: 259px;
-$hr-total-height: 454px;
+$hr-total-height: 570px;
 $hr-image: '../images/sprite.png';
-$hr: (0px, 72px, 0px, -72px, 259px, 10px, 259px, 454px, '../images/sprite.png', 'hr', );
+$hr: (0px, 72px, 0px, -72px, 259px, 10px, 259px, 570px, '../images/sprite.png', 'hr', );
 $like-name: 'like';
 $like-x: 0px;
-$like-y: 422px;
+$like-y: 538px;
 $like-offset-x: 0px;
-$like-offset-y: -422px;
+$like-offset-y: -538px;
 $like-width: 26px;
 $like-height: 32px;
 $like-total-width: 259px;
-$like-total-height: 454px;
+$like-total-height: 570px;
 $like-image: '../images/sprite.png';
-$like: (0px, 422px, 0px, -422px, 26px, 32px, 259px, 454px, '../images/sprite.png', 'like', );
+$like: (0px, 538px, 0px, -538px, 26px, 32px, 259px, 570px, '../images/sprite.png', 'like', );
 $like-hover-name: 'like_hover';
 $like-hover-x: 0px;
-$like-hover-y: 380px;
+$like-hover-y: 496px;
 $like-hover-offset-x: 0px;
-$like-hover-offset-y: -380px;
+$like-hover-offset-y: -496px;
 $like-hover-width: 26px;
 $like-hover-height: 32px;
 $like-hover-total-width: 259px;
-$like-hover-total-height: 454px;
+$like-hover-total-height: 570px;
 $like-hover-image: '../images/sprite.png';
-$like-hover: (0px, 380px, 0px, -380px, 26px, 32px, 259px, 454px, '../images/sprite.png', 'like_hover', );
+$like-hover: (0px, 496px, 0px, -496px, 26px, 32px, 259px, 570px, '../images/sprite.png', 'like_hover', );
+$single-a-name: 'single-a';
+$single-a-x: 0px;
+$single-a-y: 174px;
+$single-a-offset-x: 0px;
+$single-a-offset-y: -174px;
+$single-a-width: 19px;
+$single-a-height: 19px;
+$single-a-total-width: 259px;
+$single-a-total-height: 570px;
+$single-a-image: '../images/sprite.png';
+$single-a: (0px, 174px, 0px, -174px, 19px, 19px, 259px, 570px, '../images/sprite.png', 'single-a', );
+$single-name: 'single';
+$single-x: 0px;
+$single-y: 203px;
+$single-offset-x: 0px;
+$single-offset-y: -203px;
+$single-width: 19px;
+$single-height: 19px;
+$single-total-width: 259px;
+$single-total-height: 570px;
+$single-image: '../images/sprite.png';
+$single: (0px, 203px, 0px, -203px, 19px, 19px, 259px, 570px, '../images/sprite.png', 'single', );
 $slider-hover-name: 'slider-hover';
 $slider-hover-x: 0px;
-$slider-hover-y: 272px;
+$slider-hover-y: 388px;
 $slider-hover-offset-x: 0px;
-$slider-hover-offset-y: -272px;
+$slider-hover-offset-y: -388px;
 $slider-hover-width: 24px;
 $slider-hover-height: 24px;
 $slider-hover-total-width: 259px;
-$slider-hover-total-height: 454px;
+$slider-hover-total-height: 570px;
 $slider-hover-image: '../images/sprite.png';
-$slider-hover: (0px, 272px, 0px, -272px, 24px, 24px, 259px, 454px, '../images/sprite.png', 'slider-hover', );
+$slider-hover: (0px, 388px, 0px, -388px, 24px, 24px, 259px, 570px, '../images/sprite.png', 'slider-hover', );
 $slider-name: 'slider';
 $slider-x: 0px;
-$slider-y: 238px;
+$slider-y: 354px;
 $slider-offset-x: 0px;
-$slider-offset-y: -238px;
+$slider-offset-y: -354px;
 $slider-width: 24px;
 $slider-height: 24px;
 $slider-total-width: 259px;
-$slider-total-height: 454px;
+$slider-total-height: 570px;
 $slider-image: '../images/sprite.png';
-$slider: (0px, 238px, 0px, -238px, 24px, 24px, 259px, 454px, '../images/sprite.png', 'slider', );
+$slider: (0px, 354px, 0px, -354px, 24px, 24px, 259px, 570px, '../images/sprite.png', 'slider', );
+$tessel-a-name: 'tessel-a';
+$tessel-a-x: 0px;
+$tessel-a-y: 232px;
+$tessel-a-offset-x: 0px;
+$tessel-a-offset-y: -232px;
+$tessel-a-width: 19px;
+$tessel-a-height: 19px;
+$tessel-a-total-width: 259px;
+$tessel-a-total-height: 570px;
+$tessel-a-image: '../images/sprite.png';
+$tessel-a: (0px, 232px, 0px, -232px, 19px, 19px, 259px, 570px, '../images/sprite.png', 'tessel-a', );
+$tessel-name: 'tessel';
+$tessel-x: 0px;
+$tessel-y: 261px;
+$tessel-offset-x: 0px;
+$tessel-offset-y: -261px;
+$tessel-width: 19px;
+$tessel-height: 19px;
+$tessel-total-width: 259px;
+$tessel-total-height: 570px;
+$tessel-image: '../images/sprite.png';
+$tessel: (0px, 261px, 0px, -261px, 19px, 19px, 259px, 570px, '../images/sprite.png', 'tessel', );
 $tw-name: 'tw';
 $tw-x: 0px;
-$tw-y: 174px;
+$tw-y: 322px;
 $tw-offset-x: 0px;
-$tw-offset-y: -174px;
+$tw-offset-y: -322px;
 $tw-width: 28px;
 $tw-height: 22px;
 $tw-total-width: 259px;
-$tw-total-height: 454px;
+$tw-total-height: 570px;
 $tw-image: '../images/sprite.png';
-$tw: (0px, 174px, 0px, -174px, 28px, 22px, 259px, 454px, '../images/sprite.png', 'tw', );
+$tw: (0px, 322px, 0px, -322px, 28px, 22px, 259px, 570px, '../images/sprite.png', 'tw', );
 $tw-hover-name: 'tw_hover';
 $tw-hover-x: 0px;
-$tw-hover-y: 206px;
+$tw-hover-y: 290px;
 $tw-hover-offset-x: 0px;
-$tw-hover-offset-y: -206px;
+$tw-hover-offset-y: -290px;
 $tw-hover-width: 28px;
 $tw-hover-height: 22px;
 $tw-hover-total-width: 259px;
-$tw-hover-total-height: 454px;
+$tw-hover-total-height: 570px;
 $tw-hover-image: '../images/sprite.png';
-$tw-hover: (0px, 206px, 0px, -206px, 28px, 22px, 259px, 454px, '../images/sprite.png', 'tw_hover', );
+$tw-hover: (0px, 290px, 0px, -290px, 28px, 22px, 259px, 570px, '../images/sprite.png', 'tw_hover', );
 $up-arrow-h-name: 'up-arrow-h';
 $up-arrow-h-x: 0px;
 $up-arrow-h-y: 36px;
@@ -151,9 +195,9 @@ $up-arrow-h-offset-y: -36px;
 $up-arrow-h-width: 13px;
 $up-arrow-h-height: 8px;
 $up-arrow-h-total-width: 259px;
-$up-arrow-h-total-height: 454px;
+$up-arrow-h-total-height: 570px;
 $up-arrow-h-image: '../images/sprite.png';
-$up-arrow-h: (0px, 36px, 0px, -36px, 13px, 8px, 259px, 454px, '../images/sprite.png', 'up-arrow-h', );
+$up-arrow-h: (0px, 36px, 0px, -36px, 13px, 8px, 259px, 570px, '../images/sprite.png', 'up-arrow-h', );
 $up-arrow-name: 'up-arrow';
 $up-arrow-x: 0px;
 $up-arrow-y: 18px;
@@ -162,9 +206,9 @@ $up-arrow-offset-y: -18px;
 $up-arrow-width: 13px;
 $up-arrow-height: 8px;
 $up-arrow-total-width: 259px;
-$up-arrow-total-height: 454px;
+$up-arrow-total-height: 570px;
 $up-arrow-image: '../images/sprite.png';
-$up-arrow: (0px, 18px, 0px, -18px, 13px, 8px, 259px, 454px, '../images/sprite.png', 'up-arrow', );
+$up-arrow: (0px, 18px, 0px, -18px, 13px, 8px, 259px, 570px, '../images/sprite.png', 'up-arrow', );
 $vk-name: 'vk';
 $vk-x: 0px;
 $vk-y: 146px;
@@ -173,9 +217,9 @@ $vk-offset-y: -146px;
 $vk-width: 32px;
 $vk-height: 18px;
 $vk-total-width: 259px;
-$vk-total-height: 454px;
+$vk-total-height: 570px;
 $vk-image: '../images/sprite.png';
-$vk: (0px, 146px, 0px, -146px, 32px, 18px, 259px, 454px, '../images/sprite.png', 'vk', );
+$vk: (0px, 146px, 0px, -146px, 32px, 18px, 259px, 570px, '../images/sprite.png', 'vk', );
 $vk-hover-name: 'vk_hover';
 $vk-hover-x: 0px;
 $vk-hover-y: 118px;
@@ -184,14 +228,14 @@ $vk-hover-offset-y: -118px;
 $vk-hover-width: 32px;
 $vk-hover-height: 18px;
 $vk-hover-total-width: 259px;
-$vk-hover-total-height: 454px;
+$vk-hover-total-height: 570px;
 $vk-hover-image: '../images/sprite.png';
-$vk-hover: (0px, 118px, 0px, -118px, 32px, 18px, 259px, 454px, '../images/sprite.png', 'vk_hover', );
+$vk-hover: (0px, 118px, 0px, -118px, 32px, 18px, 259px, 570px, '../images/sprite.png', 'vk_hover', );
 $spritesheet-width: 259px;
-$spritesheet-height: 454px;
+$spritesheet-height: 570px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($down-arrow-h, $down-arrow, $download, $fb, $fb-hover, $hr, $like, $like-hover, $slider-hover, $slider, $tw, $tw-hover, $up-arrow-h, $up-arrow, $vk, $vk-hover, );
-$spritesheet: (259px, 454px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($down-arrow-h, $down-arrow, $download, $fb, $fb-hover, $hr, $like, $like-hover, $single-a, $single, $slider-hover, $slider, $tessel-a, $tessel, $tw, $tw-hover, $up-arrow-h, $up-arrow, $vk, $vk-hover, );
+$spritesheet: (259px, 570px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
