--- a/source/template/_common/_position.jade
+++ b/source/template/_common/_position.jade
@@ -1,5 +1,8 @@
 .form__section.settings-wrap_pos
-  .form__section__title Положение
+  .form__section__title.form__section__title_pos Положение
+  .setting-pos__toggle
+    button(type="radio" class="setting-pos__toggle setting-pos__toggle-tessel" id="tessel" data-type-pos="tessel-mode" )
+    button(type="radio" class="setting-pos__toggle setting-pos__toggle-single setting-pos__toggle active" id="single" data-type-pos="single-mode" )
   .setting-box
       .settings-box__row
         .settings-box__cell
