--- a/source/template/_common/_position.jade
+++ b/source/template/_common/_position.jade
@@ -2,17 +2,17 @@
   .form__section__title Положение
   .setting-box
       .settings-box__row
-        .settings-box__cell
-        .settings-box__cell
-        .settings-box__cell
+        .settings-box__cell.block00
+        .settings-box__cell.block01
+        .settings-box__cell.block02
       .settings-box__row
-        .settings-box__cell
-        .settings-box__cell
-        .settings-box__cell  
+        .settings-box__cell.block10
+        .settings-box__cell.block11
+        .settings-box__cell.block12  
       .settings-box__row
-        .settings-box__cell
-        .settings-box__cell
-        .settings-box__cell  
+        .settings-box__cell.block20
+        .settings-box__cell.block21
+        .settings-box__cell.block22
   .setting-pos.setting-pos_one
     .setting-pos__box
       label.setting-pos__text X
