--- a/source/style/_blocks/_content.scss
+++ b/source/style/_blocks/_content.scss
@@ -48,3 +48,48 @@
   max-width: 216px;
   max-height: 223px;
 }
+.top00{
+  position: absolute;
+  top: 0;
+  left: 0;
+} 
+.top01{
+  position: absolute;
+  top: 0;
+  left: 50%;
+}
+.top02{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.center10{
+  position: absolute;
+  top: 50%;
+  left: 0;
+} 
+.center11{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.center12{
+  position: absolute;
+  top: 50%;
+  right: 0;
+}
+.bottom20{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+} 
+.bottom21{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+}
+.bottom22{ 
+  position: absolute; 
+  bottom: 0;
+  right: 0;
+}
