--- a/source/template/_common/_file.jade
+++ b/source/template/_common/_file.jade
@@ -5,6 +5,7 @@
       label.form__btn
         input(type="file" id="main_img"  class="fileupload" name="files" data-url="php/index.php" accept="image/jpeg,image/png,image/gif")
     label.form__section__title#watermark Водяной знак
+    .disabled_block_input
     .form__file
       input(type="text" class="form__input-img form__input-img_watermark" name="filename" placeholder="Image.png")
       label.form__btn
