--- a/source/style/_blocks/_file.scss
+++ b/source/style/_blocks/_file.scss
@@ -75,3 +75,28 @@
     overflow: hidden;
     padding: 0;
   }
+.disabled_block_input{
+    position: absolute;
+    background-color: rgba(241, 241, 245, 0.64);
+    width: 258px;
+    height: 85px;
+    top: 24%;
+    left: 0%;
+    z-index: 1;
+    transition: all 2s linear;
+  }
+.hidden{
+    display: none;
+  }
+.visuallyhidden {
+  opacity: 0;
+}
+.disabled_block_position{
+    position: absolute;
+    background-color: rgba(241, 241, 245, 0.64);
+    width: 258px;
+    height: 47%;
+    top: 36%;
+    left: 0%;
+    z-index: 10;
+}
