--- a/source/template/_common/_opacity.jade
+++ b/source/template/_common/_opacity.jade
@@ -1,5 +1,5 @@
 .form__section.settings-wrap_opacity
-  .form__section__title Прозрачность
+  .form__section__title.form__section__title_opacity Прозрачность
   .settings-slider
       #slider
 .hr-down
