--- a/source/style/_blocks/_buttons.scss
+++ b/source/style/_blocks/_buttons.scss
@@ -1,7 +1,7 @@
  .settings-btn{
   @extend %clearfix;
 }
-.settings-btn_mod {
+.settings-btn__elem{
   width: 100px;
   height: 40px;
   border: none;
@@ -11,7 +11,7 @@
   font-weight: bold;
 }
 
-.settings-btn__left {
+.settings-btn_left {
   float: left;
   background-color: #c1cfd9;
 
@@ -20,7 +20,7 @@
   }
 }
 
-.settings-btn__right {
+.settings-btn_right {
   float: right;
   background-color: #f97e76;
 
