--- a/source/style/_blocks/_file.scss
+++ b/source/style/_blocks/_file.scss
@@ -64,6 +64,9 @@
     left: 50%;
     transform: translate(-50%,-50%);
       }
+      &:hover{
+       background: #f52214;
+      }
   }
 }
 .fileupload {
