--- a/source/template/_common/_footer.jade
+++ b/source/template/_common/_footer.jade
@@ -1,3 +1,3 @@
 footer.footer
 	span.copyright
-		| © 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его
+		| © 2016. Это сайт команды №3, пожалуйста, не копируйте и не воруйте его!
