--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -8,10 +8,10 @@ block content
     .links__languages
       ul.language
         li(class="languages__item")
-          a(href="#").languages__link
+          a(href="#" lang="ru").languages__link.languages__link_ru.languages__link_active
             | РУС
         li(class="languages__item")
-          a(href="#").languages__link
+          a(href="#" lang="eng").languages__link.languages__link_en
             | ENG
     .links__socials
       - var icons = ['fb', 'tw', 'vk']
