--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -11,7 +11,7 @@ block content
           a(href="#" lang="ru").languages__link.languages__link_ru.languages__link_active
             | РУС
         li(class="languages__item")
-          a(href="#" lang="eng").languages__link.languages__link_en
+          a(href="#" lang="en").languages__link.languages__link_en
             | ENG
     .links__socials
       - var icons = ['fb', 'tw', 'vk']
