--- a/source/template/_common/_file.jade
+++ b/source/template/_common/_file.jade
@@ -9,5 +9,5 @@
     .form__file
       input(type="text" class="form__input-img form__input-img_watermark" name="filename" placeholder="Image.png")
       label.form__btn
-        input(type="file" id="watermarkFile" class="fileupload" name="files" disabled data-url="php/index.php")
+        input(type="file" id="watermarkFile" class="fileupload" name="files" disabled data-url="php/index.php" accept="image/jpeg,image/png,image/gif")
 .hr-down
