Added tiling mode

--- a/source/style/_blocks/_position.scss
+++ b/source/style/_blocks/_position.scss
@@ -207,3 +207,19 @@ input[type='number'] {
     -moz-appearance: textfield;
 }
 //=========================================================
+
+
+.bigContainer{
+  position: absolute;
+  width: 1150px;
+  height: 900px;
+  top: -200px;
+  left: -255px;
+}
+.tilingGrid{
+  height: 700px;
+  width: 800px;
+  position: absolute;
+  left: 0;
+  top: 0;
+ }
