--- a/source/style/_blocks/_file.scss
+++ b/source/style/_blocks/_file.scss
@@ -84,6 +84,7 @@
     left: 0%;
     z-index: 1;
     transition: all 1s linear;
+    display: none;
   }
 .hidden{
     display: none;
@@ -100,4 +101,5 @@
     left: 0%;
     z-index: 10;
     transition: all 1s linear;
+    display: none;
 }
