--- a/source/template/_common/_position.jade
+++ b/source/template/_common/_position.jade
@@ -1,4 +1,4 @@
-.disabled_block_position
+.form__section_disabledSettings
 .form__section.settings-wrap_pos
   .form__section__title.form__section__title_pos Положение
   .setting-pos__toggle
