Перед слиянием с draganddrop

--- a/source/style/_blocks/_buttons.scss
+++ b/source/style/_blocks/_buttons.scss
@@ -1,7 +1,7 @@
- .settings-btn{
+ .form__settings-btn{
   @extend %clearfix;
 }
-.settings-btn__elem{
+.settings-btn{
   width: 100px;
   height: 40px;
   border: none;
