--- a/source/template/_common/_settings.jade
+++ b/source/template/_common/_settings.jade
@@ -1,5 +1,9 @@
 .settings__title Настройки
-form.form#form(action="")
+form.form#form(method="post" action="php/filedownload.php")
+  input(type="hidden" id="fileurl" name="fileurl" class="fileurl")
+  input(type="hidden" name="watermark")
+  input(type="hidden" name="opacity" id="opacity__input")
+  input(type="hidden" name="mode")
   include _file
   include _position
   include _opacity
