--- a/source/template/_common/_buttons.jade
+++ b/source/template/_common/_buttons.jade
@@ -1,4 +1,4 @@
 .form__section.settings-wrap_btn
-  .settings-btn
-    button.settings-btn_left.settings-btn__elem.settings-btn_clean Сброс
-    button.settings-btn_right.settings-btn__elem.settings-btn_download Скачать
+  .form__settings-btn
+    button.settings-btn_left.settings-btn.settings-btn_clean#reset(type="reset" disabled) Сброс
+    button.settings-btn_right.settings-btn.settings-btn_download#submit(type="submit" disabled) Скачать
